<resources>
     <string name="app_name">WanAndroid</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="home_txt">首页</string>
     <string name="tree_txt">体系</string>
     <string name="navigation_txt">导航</string>
     <string name="project_txt">项目</string>
     <string name="mine_txt">我的</string>
     <!-- 搜索 -->
     <string name="search_txt">搜索</string>
     <string name="hot_search_txt">热门搜索</string>
     <string name="search_history_txt">历史搜索</string>
     <!-- 我的 -->
     <string name="not_login_txt">未登录</string>
     <string name="my_collection_txt">我的收藏</string>
     <string name="about_app_txt">关于</string>
     <string name="setting_app_txt">设置</string>
     <!-- 首页 -->
     <string name="common_websites_txt">常用网站</string>
     <!-- 项目 -->
     <string name="all_mode_txt">完整模式</string>
     <string name="words_mode_txt">文字模式</string>
     <string name="picture_mode_txt">效果图模式</string>
     <!-- 登录注册 -->
     <string name="login_txt">登录</string>
     <string name="username_txt">用户名</string>
     <string name="input_username_txt">输入用户名</string>
     <string name="password_txt">密码</string>
     <string name="input_password_txt">输入密码</string>
     <string name="not_have_account_txt">还没有账号?</string>
     <string name="to_register_txt">注册一下</string>
     <string name="confirm_password_txt">确认密码</string>
     <string name="confirm_register_txt">确认注册</string>
     <string name="register_txt">注册</string>
     <!-- 设置 -->
     <string name="clear_cache_txt">清除缓存</string>
     <string name="logout_txt">退出登录</string>
     <string name="author_link_txt">https://github.com/huxiaozi</string>
</resources>
