<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/allMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/all_mode_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/wordsMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/words_mode_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/pictureMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/picture_mode_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>