<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">


     <TextView
          android:id="@+id/userName"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:background="@drawable/gradient_title_color"
          android:gravity="center"
          android:padding="20dp"
          android:text="@string/not_login_txt"
          android:textColor="@android:color/white"
          android:textSize="25sp"/>

     <TextView
          android:id="@+id/myCollection"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/item_selector_background"
          android:drawableRight="@drawable/ic_arrow_right_black"
          android:padding="10dp"
          android:text="@string/my_collection_txt"
          android:textColor="@android:color/black"
          android:textSize="20sp"/>

     <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

     <TextView
          android:id="@+id/setting"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/item_selector_background"
          android:drawableRight="@drawable/ic_arrow_right_black"
          android:padding="10dp"
          android:text="@string/setting_app_txt"
          android:textColor="@android:color/black"
          android:textSize="20sp"/>

     <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/gray"/>

     <TextView
          android:id="@+id/about"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/item_selector_background"
          android:drawableRight="@drawable/ic_arrow_right_black"
          android:padding="10dp"
          android:text="@string/about_app_txt"
          android:textColor="@android:color/black"
          android:textSize="20sp"/>

     <TextView
          android:layout_width="match_parent"
          android:textSize="15sp"
          android:text="当前版本:V1.0
          作者:哈哈"
          android:gravity="center"
          android:textColor="@android:color/background_dark"
          android:layout_height="200dp"/>

</LinearLayout>