<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/login_bg" />

            <ImageView
                android:id="@+id/logonIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:background="@mipmap/round_logo" />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logonIv"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/username_txt"
                android:textColor="@color/stack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userNameTv"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@null"
                android:hint="@string/input_username_txt"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/usernameEdit"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/passwordTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameEdit"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/password_txt"
                android:textColor="@color/stack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTv"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@null"
                android:hint="@string/input_password_txt"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:password="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/passwordEdit"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordEdit"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/cerulean"
                android:text="@string/login_txt"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginBtn"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_account_txt"
                    android:textColor="@color/stack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/registerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/to_register_txt"
                    android:textColor="@color/deep_stack" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

</RelativeLayout>


