<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cerulean">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back_left_white"
            android:padding="10dp" />


        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/backImg"
            android:background="@drawable/round_translate_white_boder"
            android:drawableLeft="@drawable/ic_search_white"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="70dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="12dp"
            android:layout_toLeftOf="@+id/search"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:padding="10dp"
            android:text="@string/search_txt"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:padding="15dp">

        <TextView
            android:id="@+id/hotSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_search_txt"
            android:textSize="15sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hotSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotSearch" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayout"
        android:padding="15dp">

        <TextView
            android:id="@+id/searchHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history_txt"
            android:visibility="gone"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>